@@ -17,7 +17,8 @@ IMPORTANT NOTE to users upgrading from pre-0.9.x versions of the Architect:
 *Fixed forward engineering syntax error for LONG and LONG RAW in Oracle.
 *Added convenient shortcut for performing a structural comparison directly from
  tree view of source database connections.
-*Added the ability to used auto-increment in both MySQL and PostgreSQL
+*Added the ability to forward engineer auto-increment columns in MySQL, PostgreSQL
+ and SQL Server.
 *Added project option to have relationship lines drawn as direct, straight lines
  or in the old rectilinear style.  The default is still the old style.
 *Made dragging tables much easier at extreme zoom levels by dragging the table
